--- a/pokemon.html
+++ b/pokemon.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="columnas.css" />
+    <link rel="stylesheet" href="estilos.css" />
     <title>Catálogo de Pokemon</title>
   </head>
   <body>
     <div class="contenedor">
       <div class="fila">
-        <div id="izq" class="col-lg-2 col-md-2 col-sm-1 col-xs-0">Izq</div>
-        <div id="principal" class="col-lg-8 col-md-8 col-sm-10 col-xs-12">
-          <div class="fila" id="nombre">nombre</div>
+        <div id="izq" class="col-lg-3 col-md-3 col-sm-3 col-xs-0"></div>
+        <div id="principal" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <div class="fila" id="nombrep">nombre</div>
           <div class="fila" id="central" >
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="frente" style="height: 300px;">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="frente" >
               frente
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="trasero"style="height: 300px;">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="trasero">
               trasero
             </div>
           </div>
@@ -30,7 +31,7 @@
             </button>
           </div>
         </div>
-        <div id="der" class="col-lg-2 col-md-2 col-sm-1 col-xs-0">der</div>
+        <div id="der" class="col-lg-3 col-md-3 col-sm-3 col-xs-0"></div>
       </div>
     </div>
     <script src="poke.js"></script>
